--- a/viwmall-member/src/main/resources/application.properties
+++ b/viwmall-member/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 # 应用名称
 spring.application.name=viwmall-member
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=8000
 
 
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://121.40.178.114:3306/viwmall_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+
+# json处理 时间格式
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=GMT+8
+
+mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
+
+spring.cloud.nacos.discovery.server-addr=192.168.199.185:8848
