--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 # 应用名称
 spring.application.name=viwmall-ware
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=11000
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://121.40.178.114:3306/viwmall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+
+mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
 
 
