--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -16,7 +16,10 @@ spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/(?<segment>.*),/renre
 spring.cloud.gateway.routes[1].id=product_route
 spring.cloud.gateway.routes[1].uri=lb://gulimall-product
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/product/**
-#使用过滤器重写路径
+#网关使用过滤器重写路径
+## 前端项目，/api
+## http://localhost:88/api/captcha.jpg  ==》  http://localhost:8080/renren-fast/captcha.jpg
+## http://localhost:88/api/product/category/list/tree  ==》  http://localhost:10000/product/category/list/tree
 spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
 
 
