--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -3,14 +3,19 @@ spring.application.name=viwmall-product
 # 应用服务 WEB 访问端口
 server.port=10000
 
+# 数据源配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://121.40.178.114:3306/viwmall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
 
+# mybatis plus 配置
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 
-spring.cloud.nacos.discovery.server-addr=192.168.10.105:8848
+# nacos注册中心配置
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
+
+
 
 
