商品服务后台接口删除

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.routes[1].id=admin_route
 spring.cloud.gateway.routes[1].uri=lb://renren-fast
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/**
-#使用过滤器重写路径
+#使用网关重写路径  请求我们真实接口路径
 spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
 
 
