--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -12,10 +12,16 @@ spring.datasource.password=root
 # mybatis plus 配置
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
+# 逻辑删除 1
+mybatis-plus.global-config.db-config.logic-delete-value=1
+# 逻辑未删除 0
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+# mybayis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos注册中心配置
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
-
-
+#日志级别
+#logging.level.com.viw.viwmall=debug
 
 
