品牌管理相关api。第三方服务的编写

--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -58,6 +58,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-nacos-config</artifactId>
         </dependency>
+<!--        封装的ali oss sdk-->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
