--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -24,4 +24,8 @@ spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 #日志级别
 #logging.level.com.viw.viwmall=debug
 
-
+#spring-cloud-alibaba-oss 配置
+spring.cloud.alicloud.access-key=LTAI4GFKUWQhYH1Sgeg4P5Hj
+spring.cloud.alicloud.secret-key=nYeHDwuLzKhKWWZL8hhUj03FeWzJY5
+spring.cloud.alicloud.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
+#spring.couchbase.bucket.name=xiaobo-project
