--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -8,17 +8,25 @@ spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 spring.cloud.gateway.routes[0].id=product_route
 spring.cloud.gateway.routes[0].uri=lb://viwmall-product
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
-#网关使用过滤器重写路径
+#网关使用过滤器 路径重写
 spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
+
+# 第三方服务网关处理
+spring.cloud.gateway.routes[1].id=third_party_route
+spring.cloud.gateway.routes[1].uri=lb://viwmall-third-party
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/thirdparty/**
+#网关使用过滤器重写路径
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/thirdparty/(?<segment>.*),/$\\{segment}
+
 
 
 # 后台管理页面的网关 重写过滤
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.routes[1].id=admin_route
-spring.cloud.gateway.routes[1].uri=lb://renren-fast
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/**
+spring.cloud.gateway.routes[2].id=admin_route
+spring.cloud.gateway.routes[2].uri=lb://renren-fast
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/**
 #使用网关重写路径  请求我们真实接口路径
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
 
 
 ## 前端项目，/api
