--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -13,6 +13,14 @@
     <description>公共模块</description>
 
     <dependencies>
+
+        <!--javax 下 注解 如使用自定义注解时需要这个-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
         <!--        mybatisplus-boot-->
         <dependency>
             <groupId>com.baomidou</groupId>
