会员模块和网关配置

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -18,15 +18,22 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/thirdparty/**
 #网关使用过滤器重写路径
 spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/thirdparty/(?<segment>.*),/$\\{segment}
 
+# 后台管理系统会员服务网关路由配置
+spring.cloud.gateway.routes[2].id=member_route
+spring.cloud.gateway.routes[2].uri=lb://viwmall-member
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/member/**
+#网关使用过滤器 路径重写 删除api 保留后面请求
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
+
 
 
 # 后台管理页面的网关 重写过滤
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.routes[2].id=admin_route
-spring.cloud.gateway.routes[2].uri=lb://renren-fast
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/**
+spring.cloud.gateway.routes[3].id=admin_route
+spring.cloud.gateway.routes[3].uri=lb://renren-fast
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/**
 #使用网关重写路径  请求我们真实接口路径
-spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
+spring.cloud.gateway.routes[3].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
 
 
 ## 前端项目，/api
