--- a/viwmall-member/src/main/resources/application.properties
+++ b/viwmall-member/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.application.name=viwmall-member
 # 应用服务 WEB 访问端口
 server.port=8000
 
-
-
+#数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://121.40.178.114:3306/viwmall_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
@@ -14,7 +13,12 @@ spring.datasource.password=root
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=GMT+8
 
+# mapper路径
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+# 自增id
 mybatis-plus.global-config.db-config.id-type=auto
+# mybayis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+# nacos地址
 spring.cloud.nacos.discovery.server-addr=192.168.199.185:8848
