商品服务-优惠券服务-会员服务-服务调用保存商品添加时增加的数据，封装commons公共模块的服务之间添加商品时传输对象TO

--- a/viwmall-coupon/src/main/resources/application.properties
+++ b/viwmall-coupon/src/main/resources/application.properties
@@ -16,9 +16,11 @@ spring.jackson.time-zone=GMT+8
 
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
+# mybayis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos
-spring.cloud.nacos.discovery.server-addr=192.168.199.185:8848
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
 
 
