--- a/viwmall-coupon/src/main/resources/bootstrap.properties
+++ b/viwmall-coupon/src/main/resources/bootstrap.properties
@@ -1,7 +1,10 @@
-
+## 工程名称
 #spring.application.name=viwmall-coupon
-#spring.cloud.nacos.config.server-addr=192.168.199.185:8848
+## nacos配置中心地址
+#spring.cloud.nacos.config.server-addr=192.168.31.190:8848
+## 配置中心 名称空间
 #spring.cloud.nacos.config.namespace=16ffcdfe-4e67-46ba-a35a-3b2ea841e184
+## 配置分组
 #spring.cloud.nacos.config.group=dev
 #spring.cloud.nacos.config.ext-config[0].data-id=datasource.properties
 #spring.cloud.nacos.config.ext-config[0].group=dev
@@ -10,3 +13,4 @@
 #spring.cloud.nacos.config.ext-config[1].data-id=other.properties
 #spring.cloud.nacos.config.ext-config[1].group=dev
 #spring.cloud.nacos.config.ext-config[1].refresh=true
+
