--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.cloud.alicloud.access-key=LTAI4GFKUWQhYH1Sgeg4P5Hj
 spring.cloud.alicloud.secret-key=nYeHDwuLzKhKWWZL8hhUj03FeWzJY5
 spring.cloud.alicloud.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
 #spring.couchbase.bucket.name=xiaobo-project
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
