--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -11,13 +11,14 @@ spring.datasource.password=root
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 # mybayis日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos注册中心配置
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
+logging.level.com.viw.viwmall.ware=debug
 
 
 
