--- a/viwmall-search/pom.xml
+++ b/viwmall-search/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.viw.viwmall</groupId>
+            <artifactId>viwmall-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 <!--        ES-->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
@@ -26,6 +31,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
