--- a/viwmall-search/src/main/resources/application.properties
+++ b/viwmall-search/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 应用名称
 spring.application.name=viwmall-search
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=12000
 
-
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
