--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -20,10 +20,10 @@ mybatis-plus.global-config.db-config.logic-not-delete-value=0
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos注册中心配置
-spring.cloud.nacos.discovery.server-addr=
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 #日志级别
 #logging.level.com.viw.viwmall=debug
-192.168.31.190:8848
+
 #spring-cloud-alibaba-oss 配置
 spring.cloud.alicloud.access-key=LTAI4GFKUWQhYH1Sgeg4P5Hj
 spring.cloud.alicloud.secret-key=nYeHDwuLzKhKWWZL8hhUj03FeWzJY5
