--- a/viwmall-search/pom.xml
+++ b/viwmall-search/pom.xml
@@ -21,12 +21,34 @@
             <artifactId>viwmall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-<!--        ES-->
+<!--        ES ==================  -->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>7.7.1</version>
+            <version>7.7.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.elasticsearch.client</groupId>
+                    <artifactId>elasticsearch-rest-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-client</artifactId>
+            <version>7.7.0</version>
+        </dependency>
+<!--        ===================================-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
