客户端首页业务逻辑&nginx负载均衡网关配置

--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.cloud.alicloud.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
 #spring.couchbase.bucket.name=xiaobo-project
 # 日期格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+# 关闭 thymeleaf缓存
+spring.thymeleaf.cache=false
