--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=88
 spring.application.name=viwmall-gateway
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
-
+spring.cloud.gateway.discovery.locator.enabled=true
 # 后台管理系统product商品服务
 spring.cloud.gateway.routes[0].id=product_route
 spring.cloud.gateway.routes[0].uri=lb://viwmall-product
@@ -34,13 +34,19 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/api/ware/**
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
 
 
+
 # 后台管理页面的网关 重写过滤
-spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.routes[4].id=admin_route
 spring.cloud.gateway.routes[4].uri=lb://renren-fast
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/**
 #使用网关重写路径  请求我们真实接口路径
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
+
+
+# 主机  http://viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
+spring.cloud.gateway.routes[5].id=viwmall_host_route
+spring.cloud.gateway.routes[5].uri=llb://viwmall-product
+spring.cloud.gateway.routes[5].predicates[0]=Host=viwmall.com,item.viwmall.com
 
 
 ## 前端项目，/api
