1.商品服务分类查询接口的redis分布式锁。2.使用原子加锁，原子解锁(lua)。3.引入redisson来作为分布式锁

--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=root
 # mybatis plus 配置
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
-# 逻辑删除 1
+# 逻辑删除 1C
 mybatis-plus.global-config.db-config.logic-delete-value=1
 # 逻辑未删除 0
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
@@ -34,3 +34,15 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 # 关闭 thymeleaf缓存
 spring.thymeleaf.cache=false
+
+
+
+# redis
+spring.redis.host=121.40.178.114
+spring.redis.port=6379
+#spring.redis.database=0
+#spring.redis.timeout=180000
+#spring.redis.jedis.pool.max-active=8
+#spring.redis.jedis.pool.max-wait=1
+#spring.redis.lettuce.pool.max-idle=5
+#spring.redis.lettuce.pool.min-idle=0
