--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -25,8 +25,10 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.3.1</version>
+<!--            <version>3.3.1</version>-->
+            <version>3.2.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
