--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -46,3 +46,6 @@ spring.redis.port=6379
 #spring.redis.jedis.pool.max-wait=1
 #spring.redis.lettuce.pool.max-idle=5
 #spring.redis.lettuce.pool.min-idle=0
+
+#spring cache
+spring.cache.type=redis
