product---spring-cache的编写

--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -49,3 +49,8 @@ spring.redis.port=6379
 
 #spring cache
 spring.cache.type=redis
+# 指定ttl 毫秒
+spring.cache.redis.time-to-live=3600000
+spring.cache.redis.use-key-prefix=true
+#是否缓存空值  防止缓存穿透
+spring.cache.redis.cache-null-values=true
