检索服务模块：1.检索页面的构建。2.ES中商品查询DSL的构建。3.商品检索DSL数据VO的抽取。4.商品检索结果VO的分析与模型构建。5，远程商品服务的调用

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -43,10 +43,17 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/**
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
 
 
-# 主机  http://viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
+# 主机 首页  http://viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
 spring.cloud.gateway.routes[5].id=viwmall_host_route
 spring.cloud.gateway.routes[5].uri=llb://viwmall-product
 spring.cloud.gateway.routes[5].predicates[0]=Host=viwmall.com,item.viwmall.com
+
+#  搜索服务 http://search.viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
+spring.cloud.gateway.routes[6].id=viwmall_search_route
+spring.cloud.gateway.routes[6].uri=lb://viwmall-search
+spring.cloud.gateway.routes[6].predicates[0]=Host=search.viwmall.com
+
+
 
 
 ## 前端项目，/api
