--- a/viwmall-search/src/main/resources/application.properties
+++ b/viwmall-search/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=viwmall-search
 server.port=12000
 
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
+# 关闭thymeleaf缓存
+spring.thymeleaf.cache=false
