1.商品详情页面渲染，查询渲染，sku切换渲染。2.商品详情页面VO模型抽取和封装

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -44,6 +44,7 @@ spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/(?<segment>.*),/renre
 
 
 # 主机 首页  http://viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
+# viwmall.com,item.viwmall.com两个域名都会到product服务
 spring.cloud.gateway.routes[5].id=viwmall_host_route
 spring.cloud.gateway.routes[5].uri=llb://viwmall-product
 spring.cloud.gateway.routes[5].predicates[0]=Host=viwmall.com,item.viwmall.com
@@ -52,6 +53,8 @@ spring.cloud.gateway.routes[5].predicates[0]=Host=viwmall.com,item.viwmall.com
 spring.cloud.gateway.routes[6].id=viwmall_search_route
 spring.cloud.gateway.routes[6].uri=lb://viwmall-search
 spring.cloud.gateway.routes[6].predicates[0]=Host=search.viwmall.com
+
+
 
 
 
