商品模块全局线程池配置和使用。异步编排优化商品详情业务逻辑。

--- a/viwmall-product/pom.xml
+++ b/viwmall-product/pom.xml
@@ -86,6 +86,13 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+<!--        元数据配置处理-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
