--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -55,3 +55,8 @@ spring.cache.redis.time-to-live=3600000
 spring.cache.redis.use-key-prefix=true
 #是否缓存空值  防止缓存穿透
 spring.cache.redis.cache-null-values=true
+
+#线程池参数配置
+viw.thread.core-size=20
+viw.thread.max-size=200
+viw.thread.keep-alive-time=10
