--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -55,7 +55,10 @@ spring.cloud.gateway.routes[6].uri=lb://viwmall-search
 spring.cloud.gateway.routes[6].predicates[0]=Host=search.viwmall.com
 
 
-
+# 登录授权
+spring.cloud.gateway.routes[7].id=viwmall_auth_route
+spring.cloud.gateway.routes[7].uri=lb://viwmall-auth-server
+spring.cloud.gateway.routes[7].predicates[0]=Host=auth.viwmall.com
 
 
 
