1.用户注册。2.验证码防刷。3.验证码令牌。4.spring工具密码随机加密。5.注册异常抽取和抛出

--- a/viwmall-auth-server/src/main/resources/application.properties
+++ b/viwmall-auth-server/src/main/resources/application.properties
@@ -27,3 +27,10 @@ spring.thymeleaf.suffix=.html
 # nacos
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
+
+# redis
+spring.redis.host=121.40.178.114
+spring.redis.port=6379
+
+
+
