--- a/viwmall-third-party/src/main/resources/application.properties
+++ b/viwmall-third-party/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.cloud.alicloud.access-key=LTAI4GFKUWQhYH1Sgeg4P5Hj
 spring.cloud.alicloud.secret-key=nYeHDwuLzKhKWWZL8hhUj03FeWzJY5
 spring.cloud.alicloud.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
 spring.cloud.alicloud.oss.bucket=xiaobo-project
+
+
+spring.cloud.alicloud.sms.host: https://smsmsgs.market.alicloudapi.com
+spring.cloud.alicloud.sms.path: /sms/
+spring.cloud.alicloud.sms.skin: 1
+spring.cloud.alicloud.sms.sign: 1
