1.springsession解决分布式session共享，解决父域子域作用域问题。2.自定义cookie序列化。3.使用springsession+redis存放session数据，完成分布式session共享

--- a/viwmall-auth-server/src/main/resources/application.properties
+++ b/viwmall-auth-server/src/main/resources/application.properties
@@ -31,6 +31,11 @@ spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 # redis
 spring.redis.host=121.40.178.114
 spring.redis.port=6379
+# spring session
+spring.session.store-type=redis
+# session timeout
+server.servlet.session.timeout=30m
+
 
 
 
