--- a/viwmall-search/src/main/resources/application.properties
+++ b/viwmall-search/src/main/resources/application.properties
@@ -6,3 +6,7 @@ server.port=12000
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 # 关闭thymeleaf缓存
 spring.thymeleaf.cache=false
+
+spring.redis.host=121.40.178.114
+
+spring.session.store-type=redis
