1.购物车搭建

--- a/viwmall-cart/src/main/resources/application.properties
+++ b/viwmall-cart/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 应用名称
 spring.application.name=viwmall-cart
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=30000
 # THYMELEAF (ThymeleafAutoConfiguration)
 # 开启模板缓存（默认值： true ）
 spring.thymeleaf.cache=true
@@ -23,4 +23,10 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 # 在构建 URL 时添加到视图名称后的后缀（默认值： .html ）
 spring.thymeleaf.suffix=.html
+
+
+
+# nacos
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
+
 
