--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -60,6 +60,11 @@ spring.cloud.gateway.routes[7].id=viwmall_auth_route
 spring.cloud.gateway.routes[7].uri=lb://viwmall-auth-server
 spring.cloud.gateway.routes[7].predicates[0]=Host=auth.viwmall.com
 
+# 购物车
+spring.cloud.gateway.routes[8].id=viwmall_cart_route
+spring.cloud.gateway.routes[8].uri=lb://viwmall-cart
+spring.cloud.gateway.routes[8].predicates[0]=Host=cart.viwmall.com
+
 
 
 ## 前端项目，/api
