--- a/viwmall-cart/src/main/resources/application.properties
+++ b/viwmall-cart/src/main/resources/application.properties
@@ -29,4 +29,11 @@ spring.thymeleaf.suffix=.html
 # nacos
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
+# redis
+spring.redis.host=121.40.178.114
+spring.redis.port=6379
 
+
+viwmall.thread.core-size=20
+viwmall.thread.max-size=200
+viwmall.thread.keep-alive-time=10
