1.springboot+rabbitmq 2.创建交换机，创建队列，发送和获取消息，对象的序列化和反序列化传输

--- a/viwmall-order/pom.xml
+++ b/viwmall-order/pom.xml
@@ -42,6 +42,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+<!--        消息队列-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
