--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.password=root
 
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
+
+
+# rabbitmq
+spring.rabbitmq.host=47.103.197.6
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+
