1.@RabbitListener和@RabbitHandler 2.消息的可靠性投递，生产端确认回端和队列回调

--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 应用名称
 spring.application.name=viwmall-order
 # 应用服务 WEB 访问端口
-server.port=9000
+server.port=9010
 
 
 
@@ -18,4 +18,10 @@ mybatis-plus.global-config.db-config.id-type=auto
 spring.rabbitmq.host=47.103.197.6
 spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
+# 开启发送端确认
+spring.rabbitmq.publisher-confirms=true
+# 返回端确认
+spring.rabbitmq.publisher-returns=true
+# 消息到队列  异步执行优先回调returns
+spring.rabbitmq.template.mandatory=true
 
