1.订单模块页面环境搭建

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -65,6 +65,10 @@ spring.cloud.gateway.routes[8].id=viwmall_cart_route
 spring.cloud.gateway.routes[8].uri=lb://viwmall-cart
 spring.cloud.gateway.routes[8].predicates[0]=Host=cart.viwmall.com
 
+# 订单
+spring.cloud.gateway.routes[9].id=viwmall_order_route
+spring.cloud.gateway.routes[9].uri=lb://viwmall-order
+spring.cloud.gateway.routes[9].predicates[0]=Host=order.viwmall.com
 
 
 ## 前端项目，/api
