--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=viwmall-order
 # 应用服务 WEB 访问端口
 server.port=9010
 
-
+#nacos
+spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://121.40.178.114:3306/viwmall_oms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
@@ -13,6 +14,8 @@ spring.datasource.password=root
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 
+#缓存
+spring.thymeleaf.cache=false
 
 # rabbitmq
 spring.rabbitmq.host=47.103.197.6
@@ -24,4 +27,6 @@ spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 # 消息到队列  异步执行优先回调returns
 spring.rabbitmq.template.mandatory=true
+# 设置ack手动确认（不手动确认的消息不算消费成功）
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
