--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -30,3 +30,15 @@ spring.rabbitmq.template.mandatory=true
 # 设置ack手动确认（不手动确认的消息不算消费成功）
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
+#springsession
+spring.session.store-type=redis
+
+#线程池
+viwmall.thread.core-size=20
+viwmall.thread.max-size=200
+viwmall.thread.keep-alive-time=10
+
+
+#redis
+spring.redis.host=121.40.178.114
+spring.redis.port=6379
