1.使用seata控制分布式事务，优惠券系统异常回滚，库存系统也回滚，不减库存 2.file.conf和registry.conf是seata配置文件，需要修改成自己的nacos地址

--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -74,7 +74,11 @@
 <!--            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>-->
 <!--        </dependency>-->
 
-
+<!--    seata    -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
 
 
         <dependency>
