--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 logging.level.com.viw.viwmall.ware=debug
 
+#spring.cloud.alibaba.seata.tx-service-group="default"
+
+
 
 
 
