1.MQ延时队列的交换机和队列的创建(订单服务+库存服务 需要最终一致性)，不使用seata的全局事务。 2.实现库存解锁 3.排除不使用seata的服务依赖

--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -24,5 +24,16 @@ logging.level.com.viw.viwmall.ware=debug
 
 
 
-
+# rabbitmq
+spring.rabbitmq.host=47.103.197.6
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+## 开启发送端确认
+#spring.rabbitmq.publisher-confirms=true
+## 返回端确认
+#spring.rabbitmq.publisher-returns=true
+## 消息到队列  异步执行优先回调returns
+#spring.rabbitmq.template.mandatory=true
+## 设置ack手动确认（不手动确认的消息不算消费成功）
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
