--- a/viwmall-cart/pom.xml
+++ b/viwmall-cart/pom.xml
@@ -21,6 +21,12 @@
             <groupId>com.viw.viwmall</groupId>
             <artifactId>viwmall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                    <exclusion>
+                        <groupId>com.alibaba.cloud</groupId>
+                        <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                    </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
