1.库存解锁。消息消费成功和失败的处理。ack手动确认，失败重新入队消费 2.监听队列解锁库存。订单失败 减库存 后消息补偿 重新解锁

--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -35,5 +35,5 @@ spring.rabbitmq.virtual-host=/
 ## 消息到队列  异步执行优先回调returns
 #spring.rabbitmq.template.mandatory=true
 ## 设置ack手动确认（不手动确认的消息不算消费成功）
-#spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
