1.支付宝支付，配置，页面，依赖，支付成功回调，支付VO

--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -42,3 +42,12 @@ viwmall.thread.keep-alive-time=10
 #redis
 spring.redis.host=121.40.178.114
 spring.redis.port=6379
+
+
+# alipay
+alipay.app_id=2016092200568607
+alipay.notify_url=http://xb6cg22x28.52http.net/order/pay/alipay/success
+alipay.return_url=http://localhost:2000/pay/success.html
+alipay.sign_type=RSA2
+alipay.charset=utf-8
+alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
