1.支付成功回调，跳回会员模块的会员订单列表

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -71,6 +71,13 @@ spring.cloud.gateway.routes[9].uri=lb://viwmall-order
 spring.cloud.gateway.routes[9].predicates[0]=Host=order.viwmall.com
 
 
+
+# 会员
+spring.cloud.gateway.routes[10].id=viwmall_member_route
+spring.cloud.gateway.routes[10].uri=lb://viwmall-member
+spring.cloud.gateway.routes[10].predicates[0]=Host=member.viwmall.com
+
+
 ## 前端项目，/api
 ## http://localhost:88/api/captcha.jpg  ==》  http://localhost:8080/renren-fast/captcha.jpg
 ## http://localhost:88/api/product/category/list/tree  ==》  http://localhost:10000/product/category/list/tree
