--- a/viwmall-member/src/main/resources/application.properties
+++ b/viwmall-member/src/main/resources/application.properties
@@ -22,3 +22,13 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos地址
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
+
+
+#
+spring.thymeleaf.cache=false
+
+
+spring.session.store-type=redis
+
+spring.redis.host=121.40.178.114
+spring.redis.port=6379
