--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -51,3 +51,6 @@ alipay.return_url=http://localhost:2000/pay/success.html
 alipay.sign_type=RSA2
 alipay.charset=utf-8
 alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
+
+
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
