1.秒杀活动基本环境搭建， 2.springboot+schedule+async 3.查询需要秒杀的活动

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -10,74 +10,65 @@ spring.cloud.gateway.routes[0].uri=lb://viwmall-product
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
 #网关使用过滤器 路径重写
 spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
-
+# 后台管理系统product商品服务
+spring.cloud.gateway.routes[1].id=coupon_route
+spring.cloud.gateway.routes[1].uri=lb://viwmall-coupon
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/coupon/**
+#网关使用过滤器 路径重写
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
 # 第三方服务网关处理
-spring.cloud.gateway.routes[1].id=third_party_route
-spring.cloud.gateway.routes[1].uri=lb://viwmall-third-party
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/thirdparty/**
+spring.cloud.gateway.routes[2].id=third_party_route
+spring.cloud.gateway.routes[2].uri=lb://viwmall-third-party
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/thirdparty/**
 #网关使用过滤器重写路径
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/thirdparty/(?<segment>.*),/$\\{segment}
-
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/thirdparty/(?<segment>.*),/$\\{segment}
 # 后台管理系统会员服务网关路由配置
-spring.cloud.gateway.routes[2].id=member_route
-spring.cloud.gateway.routes[2].uri=lb://viwmall-member
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/member/**
-#网关使用过滤器 路径重写 删除api 保留后面请求
-spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
-
-
-# 后台管理系统仓储服务网关路由配置
-spring.cloud.gateway.routes[3].id=ware_route
-spring.cloud.gateway.routes[3].uri=lb://viwmall-ware
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/ware/**
+spring.cloud.gateway.routes[3].id=member_route
+spring.cloud.gateway.routes[3].uri=lb://viwmall-member
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/member/**
 #网关使用过滤器 路径重写 删除api 保留后面请求
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
-
-
-
+# 后台管理系统仓储服务网关路由配置
+spring.cloud.gateway.routes[4].id=ware_route
+spring.cloud.gateway.routes[4].uri=lb://viwmall-ware
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/ware/**
+#网关使用过滤器 路径重写 删除api 保留后面请求
+spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/(?<segment>.*),/$\\{segment}
 # 后台管理页面的网关 重写过滤
-spring.cloud.gateway.routes[4].id=admin_route
-spring.cloud.gateway.routes[4].uri=lb://renren-fast
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/**
+spring.cloud.gateway.routes[5].id=admin_route
+spring.cloud.gateway.routes[5].uri=lb://renren-fast
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/**
 #使用网关重写路径  请求我们真实接口路径
-spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
-
-
+spring.cloud.gateway.routes[5].filters[0]=RewritePath=/api/(?<segment>.*),/renren-fast/$\\{segment}
 # 主机 首页  http://viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
 # viwmall.com,item.viwmall.com两个域名都会到product服务
-spring.cloud.gateway.routes[5].id=viwmall_host_route
-spring.cloud.gateway.routes[5].uri=llb://viwmall-product
-spring.cloud.gateway.routes[5].predicates[0]=Host=viwmall.com,item.viwmall.com
-
+spring.cloud.gateway.routes[6].id=viwmall_host_route
+spring.cloud.gateway.routes[6].uri=llb://viwmall-product
+spring.cloud.gateway.routes[6].predicates[0]=Host=viwmall.com,item.viwmall.com
 #  搜索服务 http://search.viwmall.com 的网关配置，请求-》nginx->网关-》真正的服务
-spring.cloud.gateway.routes[6].id=viwmall_search_route
-spring.cloud.gateway.routes[6].uri=lb://viwmall-search
-spring.cloud.gateway.routes[6].predicates[0]=Host=search.viwmall.com
+spring.cloud.gateway.routes[7].id=viwmall_search_route
+spring.cloud.gateway.routes[7].uri=lb://viwmall-search
+spring.cloud.gateway.routes[7].predicates[0]=Host=search.viwmall.com
 
 
 # 登录授权
-spring.cloud.gateway.routes[7].id=viwmall_auth_route
-spring.cloud.gateway.routes[7].uri=lb://viwmall-auth-server
-spring.cloud.gateway.routes[7].predicates[0]=Host=auth.viwmall.com
+spring.cloud.gateway.routes[8].id=viwmall_auth_route
+spring.cloud.gateway.routes[8].uri=lb://viwmall-auth-server
+spring.cloud.gateway.routes[8].predicates[0]=Host=auth.viwmall.com
 
 # 购物车
-spring.cloud.gateway.routes[8].id=viwmall_cart_route
-spring.cloud.gateway.routes[8].uri=lb://viwmall-cart
-spring.cloud.gateway.routes[8].predicates[0]=Host=cart.viwmall.com
+spring.cloud.gateway.routes[9].id=viwmall_cart_route
+spring.cloud.gateway.routes[9].uri=lb://viwmall-cart
+spring.cloud.gateway.routes[9].predicates[0]=Host=cart.viwmall.com
 
 # 订单
-spring.cloud.gateway.routes[9].id=viwmall_order_route
-spring.cloud.gateway.routes[9].uri=lb://viwmall-order
-spring.cloud.gateway.routes[9].predicates[0]=Host=order.viwmall.com
-
-
-
+spring.cloud.gateway.routes[10].id=viwmall_order_route
+spring.cloud.gateway.routes[10].uri=lb://viwmall-order
+spring.cloud.gateway.routes[10].predicates[0]=Host=order.viwmall.com
 # 会员
-spring.cloud.gateway.routes[10].id=viwmall_member_route
-spring.cloud.gateway.routes[10].uri=lb://viwmall-member
-spring.cloud.gateway.routes[10].predicates[0]=Host=member.viwmall.com
-
-
+spring.cloud.gateway.routes[11].id=viwmall_member_route
+spring.cloud.gateway.routes[11].uri=lb://viwmall-member
+spring.cloud.gateway.routes[11].predicates[0]=Host=member.viwmall.com
 ## 前端项目，/api
 ## http://localhost:88/api/captcha.jpg  ==》  http://localhost:8080/renren-fast/captcha.jpg
 ## http://localhost:88/api/product/category/list/tree  ==》  http://localhost:10000/product/category/list/tree
