1.完善秒杀商品上架和秒杀活动商品服务商品页面数据渲染

--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -69,6 +69,10 @@ spring.cloud.gateway.routes[10].predicates[0]=Host=order.viwmall.com
 spring.cloud.gateway.routes[11].id=viwmall_member_route
 spring.cloud.gateway.routes[11].uri=lb://viwmall-member
 spring.cloud.gateway.routes[11].predicates[0]=Host=member.viwmall.com
+# 秒杀
+spring.cloud.gateway.routes[12].id=viwmall_seckill_route
+spring.cloud.gateway.routes[12].uri=lb://viwmall-seckill
+spring.cloud.gateway.routes[12].predicates[0]=Host=seckill.viwmall.com
 ## 前端项目，/api
 ## http://localhost:88/api/captcha.jpg  ==》  http://localhost:8080/renren-fast/captcha.jpg
 ## http://localhost:88/api/product/category/list/tree  ==》  http://localhost:10000/product/category/list/tree
