--- a/viwmall-seckill/src/main/resources/application.properties
+++ b/viwmall-seckill/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.task.execution.pool.max-size=50
 
 spring.session.store-type=redis
 
+# mq
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.host=47.103.197.6
+spring.rabbitmq.port=
+spring.thymeleaf.cache=false
+
