--- a/viwmall-seckill/src/main/resources/application.properties
+++ b/viwmall-seckill/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.rabbitmq.host=47.103.197.6
 spring.rabbitmq.port=
 spring.thymeleaf.cache=false
 
+
+# sentinel
+#transport.port 服务消息传输端口
+spring.cloud.sentinel.transport.port=8719
+# transport.dashboard 控制台地址
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+# endpoints 暴露信息
+management.endpoints.web.exposure.include=*
