--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -68,6 +68,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-nacos-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
 <!--        封装的ali oss sdk-->
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
