1.全服务引入sentinel

--- a/viwmall-auth-server/src/main/resources/application.properties
+++ b/viwmall-auth-server/src/main/resources/application.properties
@@ -36,6 +36,11 @@ spring.session.store-type=redis
 # session timeout
 server.servlet.session.timeout=30m
 
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
 
 
 
