--- a/viwmall-cart/src/main/resources/application.properties
+++ b/viwmall-cart/src/main/resources/application.properties
@@ -37,3 +37,9 @@ spring.redis.port=6379
 viwmall.thread.core-size=20
 viwmall.thread.max-size=200
 viwmall.thread.keep-alive-time=10
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
