--- a/viwmall-coupon/src/main/resources/application.properties
+++ b/viwmall-coupon/src/main/resources/application.properties
@@ -22,5 +22,8 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # nacos
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
-
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
 
