--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -54,3 +54,10 @@ alipay.gatewayUrl=https://openapi.alipaydev.com/gateway.do
 
 
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
