--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -60,3 +60,9 @@ spring.cache.redis.cache-null-values=true
 viw.thread.core-size=20
 viw.thread.max-size=200
 viw.thread.keep-alive-time=10
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
