--- a/viwmall-third-party/src/main/resources/application.properties
+++ b/viwmall-third-party/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.cloud.alicloud.sms.host: https://smsmsgs.market.alicloudapi.com
 spring.cloud.alicloud.sms.path: /sms/
 spring.cloud.alicloud.sms.skin: 1
 spring.cloud.alicloud.sms.sign: 1
+
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
