--- a/viwmall-ware/src/main/resources/application.properties
+++ b/viwmall-ware/src/main/resources/application.properties
@@ -37,3 +37,8 @@ spring.rabbitmq.virtual-host=/
 ## 设置ack手动确认（不手动确认的消息不算消费成功）
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
