--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -3,6 +3,12 @@ server.port=88
 spring.application.name=viwmall-gateway
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
 # 后台管理系统product商品服务
 spring.cloud.gateway.routes[0].id=product_route
