--- a/viwmall-member/pom.xml
+++ b/viwmall-member/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
