--- a/viwmall-member/src/main/resources/application.properties
+++ b/viwmall-member/src/main/resources/application.properties
@@ -32,3 +32,10 @@ spring.session.store-type=redis
 
 spring.redis.host=121.40.178.114
 spring.redis.port=6379
+
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
