--- a/viwmall-product/pom.xml
+++ b/viwmall-product/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
