--- a/viwmall-search/src/main/resources/application.properties
+++ b/viwmall-search/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.thymeleaf.cache=false
 spring.redis.host=121.40.178.114
 
 spring.session.store-type=redis
+
+
+# sentinel
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
+feign.sentinel.enabled=true
