--- a/viwmall-ware/pom.xml
+++ b/viwmall-ware/pom.xml
@@ -43,6 +43,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
