--- a/viwmall-common/pom.xml
+++ b/viwmall-common/pom.xml
@@ -118,6 +118,12 @@
             <version>9.3.7.v20160115</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.3.0.Final</version>
+        </dependency>
+
 
     </dependencies>
 
