--- a/viwmall-product/src/main/resources/application.properties
+++ b/viwmall-product/src/main/resources/application.properties
@@ -22,7 +22,7 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # nacos注册中心配置
 spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 #日志级别
-#logging.level.com.viw.viwmall=debug
+logging.level.com.viw.viwmall=debug
 
 #spring-cloud-alibaba-oss 配置
 spring.cloud.alicloud.access-key=LTAI4GFKUWQhYH1Sgeg4P5Hj
