--- a/viwmall-seckill/src/main/resources/application.properties
+++ b/viwmall-seckill/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.cloud.sentinel.transport.port=8719
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 # endpoints 暴露信息
 management.endpoints.web.exposure.include=*
+# 开启feign 的sentinel
+feign.sentinel.enabled=true
