--- a/viwmall-seckill/src/main/resources/application.properties
+++ b/viwmall-seckill/src/main/resources/application.properties
@@ -35,3 +35,13 @@ spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 # 开启feign 的sentinel
 feign.sentinel.enabled=true
+
+
+# sleuth
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+# zipkin
+spring.zipkin.base-url=http://47.103.197.6:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
