--- a/viwmall-coupon/src/main/resources/application.properties
+++ b/viwmall-coupon/src/main/resources/application.properties
@@ -26,4 +26,9 @@ spring.cloud.nacos.discovery.server-addr=192.168.31.190:8848
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 feign.sentinel.enabled=true
+# zipkin
+spring.zipkin.base-url=http://47.103.197.6:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
 
