--- a/viwmall-order/src/main/resources/application.properties
+++ b/viwmall-order/src/main/resources/application.properties
@@ -61,3 +61,12 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 feign.sentinel.enabled=true
+
+# sleuth
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+# zipkin
+spring.zipkin.base-url=http://47.103.197.6:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
