--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -44,6 +44,17 @@ spring:
     sentinel:
       transport:
         dashboard: localhost:8333
+  zipkin:
+    base-url: http://47.103.197.6:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
+
+
+
 
 
 
@@ -97,3 +108,5 @@ management:
 feign:
   sentinel:
     enabled: true
+
+
