--- a/viwmall-auth-server/src/main/resources/application.properties
+++ b/viwmall-auth-server/src/main/resources/application.properties
@@ -42,5 +42,15 @@ management.endpoints.web.exposure.include=*
 feign.sentinel.enabled=true
 
 
+# sleuth
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+# zipkin
+spring.zipkin.base-url=http://47.103.197.6:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+
+
 
 
