--- a/viwmall-gateway/src/main/resources/application.properties
+++ b/viwmall-gateway/src/main/resources/application.properties
@@ -9,6 +9,15 @@ spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 feign.sentinel.enabled=true
 
+# sleuth
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+# zipkin
+spring.zipkin.base-url=http://47.103.197.6:9411/
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+
 spring.cloud.gateway.discovery.locator.enabled=true
 # 后台管理系统product商品服务
 spring.cloud.gateway.routes[0].id=product_route
